Fixed vertical alignment and fixed bug when images were cached.

--- a/gallery2/index.css
+++ b/gallery2/index.css
@@ -52,7 +52,7 @@ html {
 	display: flex;
 	align-items: center;
 	width: fit-content;
-	height: fit-content;
+	height: 100%;
 	padding: 5px;
 }
 
